# ECVcapstone

./: README.md  pyproject.toml
code/: India_rawdata.py  US_rawdata.py  finalized.py  自動化下載及解壓縮.py  資料串接.py
data/final_data/: final_data.csv
data/power bi/: ECV report_final.pbix  db_ECV final.xlsx
data/processed_data/: processed_data.csv
data/rawdata/: India_raw_data.csv  India_rawdata.csv  US_raw_data.csv  US_rawdata.csv  india_rawdata_proxy.xlsx  自動化下載及解壓縮.py
data/rawdata/XML_data/HCL Technologies Limited/: HCL Technologies Limited 2019.xml  HCL Technologies Limited 2020.xml  HCL Technologies Limited 2021.xml  HCL Technologies Limited 2022.xml  HCL Technologies Limited 2023.xml  HCL Technologies Limited 2024.xml
data/rawdata/XML_data/Infosys Limited/: Infosys Limited 2019.xml  Infosys Limited 2020.xml  Infosys Limited 2021.xml  Infosys Limited 2022.xml  Infosys Limited 2023.xml  Infosys Limited 2024.xml  Infosys Limited.csv
data/rawdata/XML_data/LTIMindtree Limited/: LTIMindtree Limited 2023.xml  LTIMindtree Limited 2024.xml  LTIMindtree Limited.csv
data/rawdata/XML_data/Persistent Systems Limited/: Persistent Systems Limited 2019.xml  Persistent Systems Limited 2020.xml  Persistent Systems Limited 2021.xml  Persistent Systems Limited 2022.xml  Persistent Systems Limited 2023.xml  Persistent Systems Limited 2024.xml  Persistent Systems Limited.csv
data/rawdata/XML_data/Tata Consultancy Services Limited/: Tata Consultancy Services Limited 2019.xml  Tata Consultancy Services Limited 2020.xml  (+5 more)
data/setup/: 公司基本資料.xlsx  會計科目表.xlsx  財務指標公式.xlsx
(+3 files in other folders)
